--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-n": "^17.17.0",
+		"eslint-plugin-promise": "^7.2.1",
+		"eslint-plugin-tailwindcss": "^3.18.0",
 		"next": "15.3.1",
+		"prettier": "^3.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
 	},
@@ -23,6 +28,7 @@
 		"eslint": "^9",
 		"eslint-config-next": "15.3.1",
 		"eslint-config-prettier": "^10.1.2",
+		"eslint-plugin-import": "^2.31.0",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	}
