--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-	"name": "ultimate-nextjs-course",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"eslint-config-standard": "^17.1.0",
-		"eslint-plugin-n": "^17.17.0",
-		"eslint-plugin-promise": "^7.2.1",
-		"eslint-plugin-tailwindcss": "^3.18.0",
-		"next": "15.3.1",
-		"prettier": "^3.5.3",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "^3",
-		"@tailwindcss/postcss": "^4",
-		"@tailwindcss/typography": "^0.5.16",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"eslint": "^9",
-		"eslint-config-next": "15.3.1",
-		"eslint-config-prettier": "^10.1.2",
-		"eslint-plugin-import": "^2.31.0",
-		"tailwindcss": "^4",
-		"typescript": "^5"
-	}
+    "name": "ultimate-nextjs-course",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-n": "^17.17.0",
+        "eslint-plugin-promise": "^7.2.1",
+        "eslint-plugin-tailwindcss": "^3.18.0",
+        "next": "15.3.1",
+        "next-themes": "^0.4.6",
+        "prettier": "^3.5.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@tailwindcss/typography": "^0.5.16",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.3.1",
+        "eslint-config-prettier": "^10.1.2",
+        "eslint-plugin-import": "^2.31.0",
+        "tailwindcss": "^4",
+        "typescript": "^5"
+    }
 }
