--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.1.12",
+        "@radix-ui/react-slot": "^1.2.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "eslint-config-standard": "^17.1.0",
         "eslint-plugin-n": "^17.17.0",
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-tailwindcss": "^3.18.0",
+        "lucide-react": "^0.506.0",
         "next": "15.3.1",
         "next-themes": "^0.4.6",
         "prettier": "^3.5.3",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "tailwind-merge": "^3.2.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
@@ -31,6 +37,7 @@
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-import": "^2.31.0",
         "tailwindcss": "^4",
+        "tw-animate-css": "^1.2.8",
         "typescript": "^5"
     }
 }
