--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.506.0",
         "next": "15.3.1",
+        "next-auth": "^5.0.0-beta.27",
         "next-themes": "^0.4.6",
         "prettier": "^3.5.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "tailwind-merge": "^3.2.0"
+        "shadcn": "^2.5.0",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "^3.2.0",
+        "toast": "^0.5.4"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
