--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^5.0.1",
+        "@mdxeditor/editor": "^3.32.2",
         "@radix-ui/react-dialog": "^1.1.11",
         "@radix-ui/react-dropdown-menu": "^2.1.12",
         "@radix-ui/react-label": "^2.1.4",
         "@radix-ui/react-slot": "^1.2.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cm6-theme-basic-dark": "^0.2.0",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.506.0",
         "next": "15.3.1",
