--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "cm6-theme-basic-dark": "^0.2.0",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.506.0",
+        "mongoose": "^8.14.2",
         "next": "15.3.1",
         "next-auth": "^5.0.0-beta.27",
         "next-themes": "^0.4.6",
