--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-n": "^17.17.0",
         "eslint-plugin-promise": "^7.2.1",
+        "eslint-plugin-readable-tailwind": "^2.1.1",
         "eslint-plugin-tailwindcss": "^3.18.0",
         "prettier": "^3.5.3",
         "tailwindcss": "^4",
