--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.56.1",
         "shadcn": "^2.5.0",
+        "slugify": "^1.6.6",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
         "toast": "^0.5.4",
