--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@radix-ui/react-label": "^2.1.4",
         "@radix-ui/react-slot": "^1.2.2",
         "bcryptjs": "^3.0.2",
+        "bright": "^1.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cm6-theme-basic-dark": "^0.2.0",
@@ -25,6 +26,7 @@
         "mongoose": "^8.14.2",
         "next": "15.3.1",
         "next-auth": "^5.0.0-beta.27",
+        "next-mdx-remote": "^5.0.0",
         "next-themes": "^0.4.6",
         "nuqs": "^2.4.3",
         "pino": "^9.6.0",
@@ -60,5 +62,5 @@
         "tw-animate-css": "^1.2.8",
         "typescript": "^5"
     },
-    "packageManager": "pnpm@10.11.1+sha512.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912"
+    "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
