--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ai-sdk/google": "^2.0.11",
+        "@ai-sdk/openai": "^2.0.23",
         "@hookform/resolvers": "^3.3.4",
         "@mdxeditor/editor": "^3.32.2",
         "@radix-ui/react-avatar": "^1.1.9",
@@ -16,6 +18,7 @@
         "@radix-ui/react-dropdown-menu": "^2.1.12",
         "@radix-ui/react-label": "^2.1.4",
         "@radix-ui/react-slot": "^1.2.2",
+        "ai": "^5.0.28",
         "bcryptjs": "^3.0.2",
         "bright": "^1.0.0",
         "class-variance-authority": "^0.7.1",
@@ -62,5 +65,5 @@
         "tw-animate-css": "^1.2.8",
         "typescript": "^5"
     },
-    "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
+    "packageManager": "pnpm@10.15.0"
 }
