--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "@ai-sdk/google": "^2.0.11",
         "@ai-sdk/openai": "^2.0.23",
         "@hookform/resolvers": "^3.3.4",
-        "@mdxeditor/editor": "^3.32.2",
+        "@mdxeditor/editor": "^3.42.0",
+        "@radix-ui/colors": "^3.0.0",
         "@radix-ui/react-avatar": "^1.1.9",
         "@radix-ui/react-dialog": "^1.1.11",
         "@radix-ui/react-dropdown-menu": "^2.1.12",
