--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "lint:fix": "next lint --fix"
     },
     "dependencies": {
         "@ai-sdk/google": "^2.0.11",
@@ -48,11 +49,14 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@next/eslint-plugin-next": "^15.5.2",
         "@tailwindcss/postcss": "^4",
         "@tailwindcss/typography": "^0.5.16",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@typescript-eslint/eslint-plugin": "^8.41.0",
+        "@typescript-eslint/parser": "^8.41.0",
         "eslint": "^9",
         "eslint-config-next": "15.3.1",
         "eslint-config-prettier": "^10.1.2",
@@ -60,11 +64,13 @@
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-n": "^17.17.0",
         "eslint-plugin-promise": "^7.2.1",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-tailwindcss": "^3.18.0",
         "prettier": "^3.5.3",
         "tailwindcss": "^4",
         "tw-animate-css": "^1.2.8",
         "typescript": "^5"
     },
-    "packageManager": "pnpm@10.15.0"
+    "packageManager": "pnpm@10.15.1"
 }
